<resources>
    <string name="app_name">LocalBusinessCard</string>
    <string name="intro">Capture your life with US</string>
<dimen name="info_size">16sp</dimen>
    <string name="listing"> \u0020\u2022  Birthday Celebrations\n
                            \u2022  MeetUps\n
                            \u2022  Parties\n
                            \u2022  Marriages\n
                            \u2022  Festivals\n
                            \u2022  Other events</string>
    <string name="name_tag">Name :</string>
    <string name="address_tag">Address :</string>
    <string name="website_tag">Website :</string>
    <string name="phone_tag">Phone :</string>
    <string name="name_value">Darshit Suratwala</string>
    <string name="address_value">This is my address, City , State</string>
    <string name="website_value">www.giyf.com</string>
    <string name="phone_value">9876543210</string>
    <string name="main_title">DS Photography</string>
    <string name="service_tag">Services for :</string>
</resources>
