<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/def_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_tag"
            android:textColor="@color/cherry_red"
            android:textSize="@dimen/info_size"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_tag"
            android:textColor="@color/cherry_red"
            android:textSize="@dimen/info_size"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/website_tag"
            android:textColor="@color/cherry_red"
            android:textSize="@dimen/info_size"

            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_tag"
            android:textColor="@color/cherry_red"
            android:textSize="@dimen/info_size"

            />
    </LinearLayout>

    <LinearLayout
        android:textColor="@color/cherry_red"

        android:layout_width="@dimen/no_dimension"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="@dimen/def_margin">

        <TextView
            android:textColor="@color/cherry_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_value"
            android:textSize="@dimen/info_size"
            />

        <TextView
            android:textColor="@color/cherry_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_value"
            android:textSize="@dimen/info_size"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/website_value"
            android:autoLink="web"
            android:textColor="@color/cherry_red"
            android:textSize="@dimen/info_size"

            android:textColorLink="@color/cherry_red"/>



        <TextView
            android:textColorLink="@color/cherry_red"
            android:textColor="@color/cherry_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_value"
            android:autoLink="phone"
            android:textSize="@dimen/info_size"
            />
    </LinearLayout>

</LinearLayout>